[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/UI/Menus/blue_button_normal.png" type="Texture" id=1]
[ext_resource path="res://Resources/FutureFont_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/UI/Menus/blue_button_pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Menus/red_button_hover.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UI/Menus/MainMenu.gd" type="Script" id=5]

[sub_resource type="GradientTexture" id=1]

[sub_resource type="Theme" id=3]

[sub_resource type="Theme" id=2]
Label/fonts/font = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
expand = true

[node name="MC" type="MarginContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VC" type="VBoxContainer" parent="BG/MC"]
margin_left = 1370.0
margin_top = 335.0
margin_right = 1870.0
margin_bottom = 745.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 12
size_flags_vertical = 4
custom_constants/separation = 30

[node name="SinglePlayerButton" type="TextureButton" parent="BG/MC/VC"]
margin_right = 500.0
margin_bottom = 80.0
rect_min_size = Vector2( 500, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource( 3 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="BG/MC/VC/SinglePlayerButton"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
text = "Single Player"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiPlayerButton" type="TextureButton" parent="BG/MC/VC"]
margin_top = 110.0
margin_right = 500.0
margin_bottom = 190.0
rect_min_size = Vector2( 500, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="BG/MC/VC/MultiPlayerButton"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
text = "MultiPlayer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutButton" type="TextureButton" parent="BG/MC/VC"]
margin_top = 220.0
margin_right = 500.0
margin_bottom = 300.0
rect_min_size = Vector2( 500, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="BG/MC/VC/AboutButton"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
text = "About"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="BG/MC/VC"]
margin_top = 330.0
margin_right = 500.0
margin_bottom = 410.0
rect_min_size = Vector2( 500, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="BG/MC/VC/QuitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BG/MC/VC/SinglePlayerButton" to="." method="_on_SinglePlayerButton_pressed"]
[connection signal="pressed" from="BG/MC/VC/MultiPlayerButton" to="." method="_on_MultiPlayerButton_pressed"]
[connection signal="pressed" from="BG/MC/VC/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="BG/MC/VC/QuitButton" to="." method="_on_QuitButton_pressed"]
